--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   },
   "devDependencies": {
     "@material-tailwind/react": "^1.2.3",
+    "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
+    "react-icons": "^4.4.0",
     "tailwindcss": "^3.1.8"
   }
 }
