--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "ethers": "^5.7.0",
     "next": "12.2.5",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.6.4"
   },
   "devDependencies": {
     "@material-tailwind/react": "^1.2.3",
