--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "animate.css": "^4.1.1",
     "ethers": "^5.7.0",
     "next": "12.2.5",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.0.8",
     "wagmi": "^0.6.4"
   },
   "devDependencies": {
